fix: overflow in footer

--- a/public/css/extra.css
+++ b/public/css/extra.css
@@ -311,6 +311,10 @@ div.item_thumbnail_detail div {
     max-width: 100%;
   }
 
+  .md-footer{
+    overflow: hidden;
+  }
+
   img.game_item {
     max-width: 300px;
     display: block;
